test/Test12.java

package com.lxz;

public class Test12{

	public static final int OK = 1;	//成功
	public static final int ERROR = 2;	//error
	public static final int OTHER = 3;	//其他
}
